perf: imgs convert

--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -15,6 +15,7 @@
     
 .about__photo img
     width: 500px
+    height: 500px
     // margin-right: 3rem
     border-radius: 50%
     box-shadow: 0 0 25px var(--main-color)
@@ -51,6 +52,7 @@
         
     .about__photo img
         width: 420px
+        height: 420px
 
     .about__text
         max-width: 500px
@@ -69,6 +71,7 @@
 
     .about__photo img
         width: 380px
+        height: 380px
 
 @media (0px <= width <= 590px)
     .about
@@ -84,6 +87,7 @@
 
     .about__photo img
         width: 300px
+        height: 300px
 
 @media (0px <= width <= 430px)
     .about
@@ -97,5 +101,6 @@
 
     .about__photo img
         width: 240px
+        height: 240px
 
     
