--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -107,6 +107,7 @@
 .div-right img
     margin: 4rem 0 
     width: 320px
+    height: 240px
 
 
 @media (0 <= width < 1024px)
@@ -129,6 +130,7 @@
 
     .div-right img
         width: 260px
+        height: 195px
 
 @media (0px <= width <= 430px)
     .contact h3
@@ -140,6 +142,7 @@
 
     .div-right img
         width: 200px
+        height: 150px
 
     .div-left ul li
         font-size: 1.2rem
