--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -82,6 +82,7 @@
 .content-right img
     position: relative
     width: 500px
+    height: 500px
     top: -20px
     margin: 0
     animation: float 2s ease-in-out infinite alternate
@@ -99,6 +100,7 @@
 @media (0 <= width <= 1220px)
     .content-right img
         width: 420px
+        height: 420px
     
     .content-left h1
         font-size: 4rem
@@ -115,6 +117,7 @@
 
     .content-right img
         width: 380px
+        height: 380px
 
 @media (0px <= width <= 590px)
     .content-left code
@@ -133,6 +136,7 @@
         
     .content-right img
         width: 300px
+        height: 300px
 
 @media (0px <= width <= 430px)
     .content-left h1
@@ -150,6 +154,7 @@
         
     .content-right img
         width: 240px
+        height: 240px
         
     
 
