--- a/src/app/components/skills/skills.component.sass
+++ b/src/app/components/skills/skills.component.sass
@@ -41,7 +41,7 @@
     
 .skill img
     width: 4rem
-    object-fit: cover
+    height: 4rem
     margin: 10px
     // filter: drop-shadow(0 0 30px var(--main-color))
 
@@ -96,6 +96,7 @@
     
     .skill img
         width: 3.4rem
+        height: 3.4rem
         margin: 8px
 
     .skill progress
