feat: Added scroll-triggered animations

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,9 +1,9 @@
 <section id="about">
-    <div class="about">
-        <div class="about__photo">
+    <div class="about hidden">
+        <div class="about__photo" appScrollAnimator animationClass="fadeFromLeft">
             <img src="./assets/imgs/cartoon.png" alt="Cartoon ilustrativo">
         </div>
-        <div class="about__text">
+        <div class="about__text" appScrollAnimator animationClass="fadeFromRight">
             <h3>Sobre <span>mim</span></h3>
             <p>Olá! Sou João Vitor, estou cursando Análise e Desenvolvimento de Sistemas. Concluí
                 diversos cursos de desenvolvimento Front-End e, atualmente, estou extremamente entusiasmado com a
