--- a/src/app/components/header/header.component.sass
+++ b/src/app/components/header/header.component.sass
@@ -97,10 +97,12 @@
         pointer-events: none
         transition: transform .3s ease
         transform: translateX(100%)
+        opacity: 0
 
     .show
         pointer-events: all
         transform: translateZ(0)
+        opacity: 1
         
     .showBt
         border-top-color: transparent
