--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="content" id="home">
-    <div class="content-left">
+    <div class="content-left fadeInDropDown">
         <code>&lt;Hello World&gt;</code>
         <h1>João V. Leão</h1>
         <h2>Desenvolvedor Front-end.</h2>
@@ -8,7 +8,7 @@
             <a href="https://www.linkedin.com/in/joao-vitor-d-leao/" target="_blank" rel="noopener noreferrer" title="Linkedin"><i class='bx bxl-linkedin-square' ></i></a>
         </div>
     </div>
-    <div class="content-right">
-        <img src="./assets/imgs/ilustrativa.png" alt="Cartoon ilustrativo">
+    <div class="content-right fadeInDropDown">
+        <img class="fadeInDropDown" src="./assets/imgs/ilustrativa.png" alt="Cartoon ilustrativo">
     </div>
 </section>
