--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
     <h3>Contato</h3>
     <p>Muito obrigado por chegar até aqui!</p>
     <div class="container">
-        <div class="div-left">
+        <div class="div-left" appScrollAnimator animationClass="fadeFromLeft">
             <ul>
                 <li class="li email">
                     <i class='bx bx-envelope bx-flashing'></i>
@@ -24,7 +24,7 @@
             <a class="btn-whats" href="https://wa.me/5562993305993" target="_blank" title="começar uma conversa no Whatsapp"><i
                     class='bx bxl-whatsapp'></i>Whatsapp</a>
         </div>
-        <div class="div-right">
+        <div class="div-right" appScrollAnimator animationClass="fadeFromRight">
             <img src="./assets/imgs/iconMensagem.png" alt="Ícone de mensagem">
         </div>
     </div>
