--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -85,7 +85,7 @@
     height: 500px
     top: -20px
     margin: 0
-    animation: float 2s ease-in-out infinite alternate
+    animation: fadeInDropDown .6s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s forwards, float 2s ease-in-out .3s infinite alternate
 
 @keyframes float
     0%
