--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -3,7 +3,7 @@
         <h3>Skills</h3>
     </div>
     <div class="skills">
-        <div class="skill" *ngFor="let skill of skills">
+        <div class="skill" *ngFor="let skill of skills" appScrollAnimator animationClass="fadeFromLeft">
             <span>{{ skill.name}}</span>
             <img [src]="skill.img" [alt]="skill.descImg">
             <progress [class]="skill.color" [value]="skill.score" max="100"></progress>
