--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -3,11 +3,8 @@
         <h3>Skills</h3>
     </div>
     <div class="skills">
-        <div class="skill" *ngFor="let skill of skills" appScrollAnimator animationClass="fadeFromLeft">
-            <span>{{ skill.name}}</span>
+        <div class="skill" *ngFor="let skill of skills" appScrollAnimator animationClass="fadeFromLeft" [title]="skill.name">
             <img [src]="skill.img" [alt]="skill.descImg">
-            <progress [class]="skill.color" [value]="skill.score" max="100"></progress>
         </div>
-
     </div>
 </section>
