style: animation correction

--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -10,6 +10,7 @@
     align-items: center
 
 .about__photo
+    opacity: 0
     background: var(--main-color)
     border-radius: 50%
     
@@ -25,6 +26,8 @@
 .about__photo img:hover
     box-shadow: 0 0 50px var(--main-color), 0 0 100px var(--main-color)
 
+.about__text
+    opacity: 0
 
 .about__text h3
     width: 80%
