--- a/src/app/components/contact/contact.component.sass
+++ b/src/app/components/contact/contact.component.sass
@@ -28,6 +28,7 @@
     justify-content: center
     flex-direction: column
     width: auto
+    opacity: 0
   
 
 .div-left ul
@@ -103,6 +104,9 @@
     color: white
     transform: scale (1.3)translateY(-5px)
     box-shadow: 0 0 25px var(--main-color)
+
+.div-right
+    opacity: 0
 
 .div-right img
     margin: 4rem 0 
