--- a/src/app/components/projects/projects.component.sass
+++ b/src/app/components/projects/projects.component.sass
@@ -27,6 +27,7 @@ h3
     overflow: hidden
     border-radius: 20px
     box-shadow: 0 8px 24px hsla(0, 0%, 0%)
+    opacity: 0
     
 
 .project-img img
